Test suite runs locally

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,14 @@ set(CMAKE_C_STANDARD 11)
 
 add_executable(space_invaders_8080 src/main.c
         include/foo.h)
+
+enable_testing()
+
+add_executable(test_test tests/test_test.c)
+
+add_test(NAME test1 COMMAND test_test 1)
+
+#add_test(
+#        NAME test2
+#        COMMAND test_test 0
+#)
