--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ project(space_invaders_8080 C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(space_invaders_8080 src/main.c
-        include/foo.h)
+        include/foo.h
+        src/disassemble8080p.c)
 
 enable_testing()
 
