Fixed test test_mov_reg_to_reg to call emulate8080. Added implementation and passing tests for 0x7a, 0x7b, 0x7c.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,5 @@ add_executable(mov_reg_to_reg tests/test_mov_reg_to_reg.c)
 
 # MOV REG to REG Tests - create a unique name, use the opcode as the first argument (COMMAND function_name arg1)
 add_test(NAME mov_a_d COMMAND mov_reg_to_reg 0x7a)
+add_test(NAME mov_a_e COMMAND mov_reg_to_reg 0x7b)
+add_test(NAME mov_a_h COMMAND mov_reg_to_reg 0x7c)
