--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,15 +7,16 @@ add_executable(space_invaders_8080 src/main.c
         include/foo.h
         src/disassemble8080p.c
         src/shell.c
+        src/state.c
         include/state.h)
 
 enable_testing()
 
 # DAMIAN's TESTS
 # Add your test file as an executable, first argument is executable name and second is path to file to convert to executable
-add_executable(mov_reg_to_reg tests/test_mov_reg_to_reg.c)
-add_executable(test_mov_mem_to_reg tests/test_mov_mem_to_reg.c)
-add_executable(test_mov_reg_to_mem tests/test_mov_reg_to_mem.c)
+add_executable(mov_reg_to_reg tests/test_mov_reg_to_reg.c src/state.c src/shell.c)
+add_executable(test_mov_mem_to_reg tests/test_mov_mem_to_reg.c src/state.c src/shell.c)
+add_executable(test_mov_reg_to_mem tests/test_mov_reg_to_mem.c src/state.c src/shell.c)
 
 # MOV REG to REG Tests - create a unique name, use the opcode as the first argument for the executable (COMMAND function_name arg1)
 add_test(NAME mov_a_d COMMAND mov_reg_to_reg 0x7a)
@@ -29,7 +30,7 @@ add_test(NAME mov_a_m COMMAND test_mov_mem_to_reg 0x7e)
 add_test(NAME mov_m_a COMMAND test_mov_reg_to_mem 0x77)
 
 # NICK's TESTS
-add_executable(test_load tests/test_load.c src/state.c)
+add_executable(test_load tests/test_load.c src/state.c src/shell.c)
 
 # add_test(NAME test1 COMMAND test_test 1)
 add_test(NAME test_LXI_B COMMAND test_load 0x01)
