--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,3 +92,6 @@ add_test(NAME test_POP_H, COMMAND test_push_pop 0xe1)
 add_test(NAME test_PUSH_H, COMMAND test_push_pop 0xe5)
 add_test(NAME test_POP_PSW, COMMAND test_push_pop 0xf1)
 add_test(NAME test_PUSH_PSW, COMMAND test_push_pop 0xf5)
+
+add_executable(test_call tests/test_call.c src/state.c src/shell.c)
+add_test(NAME test_CALL, COMMAND test_call 0xcd)
