Update the latest merges to main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,14 +94,14 @@ add_test(NAME test_PUSH_H, COMMAND test_push_pop 0xe5)
 add_test(NAME test_POP_PSW, COMMAND test_push_pop 0xf1)
 add_test(NAME test_PUSH_PSW, COMMAND test_push_pop 0xf5)
 
-add_executable(test_call tests/test_call.c src/state.c src/shell.c)
+add_executable(test_call tests/test_call.c)
 add_test(NAME test_CALL, COMMAND test_call 0xcd)
 
-add_executable(test_immediates tests/test_immediates.c src/state.c src/shell.c)
+add_executable(test_immediates tests/test_immediates.c)
 add_test(NAME test_ANI_D8, COMMAND test_immediates 0xe6)
 
-add_executable(test_xchg tests/test_xchg.c src/state.c src/shell.c)
+add_executable(test_xchg tests/test_xchg.c)
 add_test(NAME test_XCHG, COMMAND test_xchg 0xeb)
 
-add_executable(test_compare tests/test_compare.c src/state.c src/shell.c)
+add_executable(test_compare tests/test_compare.c)
 add_test(NAME test_CPI_D8, COMMAND test_compare 0xfe)
