Added XRI case and passing tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ add_executable(test_mov_reg_to_mem tests/test_mov_reg_to_mem.c)
 add_executable(test_return tests/test_return.c)
 add_executable(test_adi tests/test_adi.c)
 add_executable(test_jump tests/test_jump.c)
-add_executable(test_xra_reg tests/test_xra_reg.c)
+add_executable(test_xra_xri tests/test_xra_xri.c)
 add_executable(test_ana_reg tests/test_ana_reg.c)
 
 # MOV REG to REG Tests - create a unique name, use the opcode as the first argument for the executable (COMMAND function_name arg1)
@@ -44,15 +44,16 @@ add_test(NAME ana_l COMMAND test_ana_reg 0xa5)
 add_test(NAME ana_m COMMAND test_ana_reg 0xa6)
 add_test(NAME ana_a COMMAND test_ana_reg 0xa7)
 
-# XRA REG Tests
-add_test(NAME xra_b COMMAND test_xra_reg 0xa8)
-add_test(NAME xra_c COMMAND test_xra_reg 0xa9)
-add_test(NAME xra_d COMMAND test_xra_reg 0xaa)
-add_test(NAME xra_e COMMAND test_xra_reg 0xab)
-add_test(NAME xra_h COMMAND test_xra_reg 0xac)
-add_test(NAME xra_l COMMAND test_xra_reg 0xad)
-add_test(NAME xra_m COMMAND test_xra_reg 0xae)
-add_test(NAME xra_a COMMAND test_xra_reg 0xaf)
+# XRA and XRI Tests
+add_test(NAME xra_b COMMAND test_xra_xri 0xa8)
+add_test(NAME xra_c COMMAND test_xra_xri 0xa9)
+add_test(NAME xra_d COMMAND test_xra_xri 0xaa)
+add_test(NAME xra_e COMMAND test_xra_xri 0xab)
+add_test(NAME xra_h COMMAND test_xra_xri 0xac)
+add_test(NAME xra_l COMMAND test_xra_xri 0xad)
+add_test(NAME xra_m COMMAND test_xra_xri 0xae)
+add_test(NAME xra_a COMMAND test_xra_xri 0xaf)
+add_test(NAME xri COMMAND test_xra_xri 0xee)
 
 # Jump Tests
 add_test(NAME jnz COMMAND test_jump 0xc2)
