--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,7 +99,11 @@ add_test(NAME test_CALL, COMMAND test_call 0xcd)
 add_test(NAME test_CNZ, COMMAND test_call 0xc4)
 add_test(NAME test_CZ, COMMAND test_call 0xcc)
 add_test(NAME test_CNC, COMMAND test_call 0xd4)
-#add_test(NAME test_CC, COMMAND test_call 0xdc)
+add_test(NAME test_CC, COMMAND test_call 0xdc)
+#add_test(NAME test_CPO, COMMAND test_call 0xe4)
+#add_test(NAME test_CPE COMMAND test_call 0xec)
+#add_test(NAME test_CP, COMMAND test_call 0xf4)
+#add_test(NAME test_CM, COMMAND test_call 0xfc)
 
 add_executable(test_immediates tests/test_immediates.c)
 add_test(NAME test_ANI_D8, COMMAND test_immediates 0xe6)
