Most of the tests for increment and add instructions. ADC still need to be finalized

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,9 +65,36 @@ add_test(NAME test_LDAX_D COMMAND test_load 0x1a)
 
 # Test Add Instructions
 add_executable(test_add tests/test_add.c)
-add_test(NAME test_DAD_B COMMAND test_add 0x09)
+add_test(NAME test_INR_A COMMAND test_add 0x3c)
+add_test(NAME test_INR_B COMMAND test_add 0x04)
+add_test(NAME test_INR_C COMMAND test_add 0x0c)
+add_test(NAME test_INR_D COMMAND test_add 0x14)
+add_test(NAME test_INR_E COMMAND test_add 0x1c)
+add_test(NAME test_INR_H COMMAND test_add 0x24)
+add_test(NAME test_INR_L COMMAND test_add 0x2c)
+add_test(NAME test_INR_M COMMAND test_add 0x34)
 add_test(NAME test_INX_D COMMAND test_add 0x13)
+add_test(NAME test_ADD_A COMMAND test_add 0x87)
+add_test(NAME test_ADD_B COMMAND test_add 0x80)
+add_test(NAME test_ADD_C COMMAND test_add 0x81)
+add_test(NAME test_ADD_D COMMAND test_add 0x82)
+add_test(NAME test_ADD_E COMMAND test_add 0x83)
+add_test(NAME test_ADD_H COMMAND test_add 0x84)
+add_test(NAME test_ADD_L COMMAND test_add 0x85)
+add_test(NAME test_ADD_M COMMAND test_add 0x86)
+add_test(NAME test_ADC_A COMMAND test_add 0x8f)
+add_test(NAME test_ADC_B COMMAND test_add 0x88)
+add_test(NAME test_ADC_C COMMAND test_add 0x89)
+add_test(NAME test_ADC_D COMMAND test_add 0x8a)
+add_test(NAME test_ADC_E COMMAND test_add 0x8b)
+add_test(NAME test_ADC_H COMMAND test_add 0x8c)
+add_test(NAME test_ADC_L COMMAND test_add 0x8d)
+add_test(NAME test_ADC_M COMMAND test_add 0x8e)
+add_test(NAME test_ACI COMMAND test_add 0xce)
+add_test(NAME test_DAD_B COMMAND test_add 0x09)
 add_test(NAME test_DAD_D COMMAND test_add 0x19)
+add_test(NAME test_DAD_SP COMMAND test_add 0x39)
+
 
 # Test Subtract Instructions
 add_executable(test_subtract tests/test_subtract.c)
