CMP_BCDEHL, CMP_A

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,3 +165,10 @@ add_test(NAME test_XCHG, COMMAND test_xchg 0xeb)
 add_executable(test_compare tests/test_compare.c)
 add_test(NAME test_CPI_D8, COMMAND test_compare 0xfe)
 add_test(NAME test_CMP_B, COMMAND test_compare 0xb8)
+add_test(NAME test_CMP_C, COMMAND test_compare 0xb9)
+add_test(NAME test_CMP_D, COMMAND test_compare 0xba)
+add_test(NAME test_CMP_E, COMMAND test_compare 0xbb)
+add_test(NAME test_CMP_H, COMMAND test_compare 0xbc)
+add_test(NAME test_CMP_L, COMMAND test_compare 0xbd)
+add_test(NAME test_CMP_M, COMMAND test_compare 0xbe)
+add_test(NAME test_CMP_A, COMMAND test_compare 0xbf)
