--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,6 +126,7 @@ add_test(NAME test_DCX_B COMMAND test_subtract 0x0b)
 add_test(NAME test_DCX_D COMMAND test_subtract 0x1b)
 add_test(NAME test_DCX_H COMMAND test_subtract 0x2b)
 add_test(NAME test_DCX_SP COMMAND test_subtract 0x3b)
+add_test(NAME test_SUB_A COMMAND test_subtract 0x97)
 add_test(NAME test_subtract_helper COMMAND test_subtract 0xFFFF)
 
 # Test Move Immediate Instructions
