HLT written/tested

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -178,3 +178,4 @@ add_test(NAME test_CMC, COMMAND test_cmc 0x3f)
 add_executable(test_io_interrupts tests/test_io_interrupts.c)
 add_test(NAME test_EI, COMMAND test_io_interrupts 0xfb)
 add_test(NAME test_DI, COMMAND test_io_interrupts 0xf3)
+add_test(NAME test_HLT, COMMAND test_io_interrupts 0x76)
