--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,3 +179,7 @@ add_executable(test_io_interrupts tests/test_io_interrupts.c)
 add_test(NAME test_EI, COMMAND test_io_interrupts 0xfb)
 add_test(NAME test_DI, COMMAND test_io_interrupts 0xf3)
 add_test(NAME test_HLT, COMMAND test_io_interrupts 0x76)
+
+add_executable(test_state tests/test_states.c)
+add_test(NAME test_state_at_10, COMMAND test_state 10)
+add_test(NAME test_state_at_25, COMMAND test_state 25)
