RST 0 thru 7 tested, written

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,6 +179,14 @@ add_executable(test_io_interrupts tests/test_io_interrupts.c)
 add_test(NAME test_EI, COMMAND test_io_interrupts 0xfb)
 add_test(NAME test_DI, COMMAND test_io_interrupts 0xf3)
 add_test(NAME test_HLT, COMMAND test_io_interrupts 0x76)
+add_test(NAME test_RST_0, COMMAND test_io_interrupts 0xc7)
+add_test(NAME test_RST_1, COMMAND test_io_interrupts 0xcf)
+add_test(NAME test_RST_2, COMMAND test_io_interrupts 0xd7)
+add_test(NAME test_RST_3, COMMAND test_io_interrupts 0xdf)
+add_test(NAME test_RST_4, COMMAND test_io_interrupts 0xe7)
+add_test(NAME test_RST_5, COMMAND test_io_interrupts 0xef)
+add_test(NAME test_RST_6, COMMAND test_io_interrupts 0xf7)
+add_test(NAME test_RST_7, COMMAND test_io_interrupts 0xff)
 
 add_executable(test_state tests/test_states.c)
 add_test(NAME test_state_at_10, COMMAND test_state 10)
