Added all mov_reg_to_reg tests. Commented out mov_mem_to_reg and mov_reg_to_mem for now until I can rewrite the test files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ add_test(NAME test_mov_d_a COMMAND mov_reg_to_reg 0x57)
 add_test(NAME test_mov_e_b COMMAND mov_reg_to_reg 0x58)
 add_test(NAME test_mov_e_c COMMAND mov_reg_to_reg 0x59)
 add_test(NAME test_mov_e_d COMMAND mov_reg_to_reg 0x5a)
-add_test(NAME test_mov_e_e COMMAND mov_reg_to_reg 0x5e)
+add_test(NAME test_mov_e_e COMMAND mov_reg_to_reg 0x5b)
 add_test(NAME test_mov_e_h COMMAND mov_reg_to_reg 0x5c)
 add_test(NAME test_mov_e_l COMMAND mov_reg_to_reg 0x5d)
 add_test(NAME test_mov_e_a COMMAND mov_reg_to_reg 0x5f)
@@ -66,23 +66,23 @@ add_test(NAME test_mov_a_a COMMAND mov_reg_to_reg 0x7f)
 
 # MOV MEM to REG Tests - create a unique name, use the opcode as the first argument for the executable (COMMAND function_name arg1)
 add_executable(test_mov_mem_to_reg tests/test_mov_mem_to_reg.c)
-add_test(NAME test_mov_b_m COMMAND test_mov_mem_to_reg 0x46)
-add_test(NAME test_mov_c_m COMMAND test_mov_mem_to_reg 0x4e)
-add_test(NAME test_mov_d_m COMMAND test_mov_mem_to_reg 0x56)
-add_test(NAME test_mov_e_m COMMAND test_mov_mem_to_reg 0x5e)
-add_test(NAME test_mov_h_m COMMAND test_mov_mem_to_reg 0x66)
-add_test(NAME test_mov_l_m COMMAND test_mov_mem_to_reg 0x6e)
-add_test(NAME test_mov_a_m COMMAND test_mov_mem_to_reg 0x7e)
+#add_test(NAME test_mov_b_m COMMAND test_mov_mem_to_reg 0x46)
+#add_test(NAME test_mov_c_m COMMAND test_mov_mem_to_reg 0x4e)
+#add_test(NAME test_mov_d_m COMMAND test_mov_mem_to_reg 0x56)
+#add_test(NAME test_mov_e_m COMMAND test_mov_mem_to_reg 0x5e)
+#add_test(NAME test_mov_h_m COMMAND test_mov_mem_to_reg 0x66)
+#add_test(NAME test_mov_l_m COMMAND test_mov_mem_to_reg 0x6e)
+#add_test(NAME test_mov_a_m COMMAND test_mov_mem_to_reg 0x7e)
 
 # MOV REG to MEM Tests - create a unique name, use the opcode as the first argument for the executable (COMMAND function_name arg1)
 add_executable(test_mov_reg_to_mem tests/test_mov_reg_to_mem.c)
-add_test(NAME test_mov_m_b COMMAND test_mov_reg_to_mem 0x70)
-add_test(NAME test_mov_m_c COMMAND test_mov_reg_to_mem 0x71)
-add_test(NAME test_mov_m_d COMMAND test_mov_reg_to_mem 0x72)
-add_test(NAME test_mov_m_e COMMAND test_mov_reg_to_mem 0x73)
-add_test(NAME test_mov_m_h COMMAND test_mov_reg_to_mem 0x74)
-add_test(NAME test_mov_m_l COMMAND test_mov_reg_to_mem 0x75)
-add_test(NAME test_mov_m_a COMMAND test_mov_reg_to_mem 0x77)
+#add_test(NAME test_mov_m_b COMMAND test_mov_reg_to_mem 0x70)
+#add_test(NAME test_mov_m_c COMMAND test_mov_reg_to_mem 0x71)
+#add_test(NAME test_mov_m_d COMMAND test_mov_reg_to_mem 0x72)
+#add_test(NAME test_mov_m_e COMMAND test_mov_reg_to_mem 0x73)
+#add_test(NAME test_mov_m_h COMMAND test_mov_reg_to_mem 0x74)
+#add_test(NAME test_mov_m_l COMMAND test_mov_reg_to_mem 0x75)
+#add_test(NAME test_mov_m_a COMMAND test_mov_reg_to_mem 0x77)
 
 # ANA REG Tests
 add_executable(test_ana_reg tests/test_ana_reg.c)
