--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,13 +66,13 @@ add_test(NAME test_mov_a_a COMMAND mov_reg_to_reg 0x7f)
 
 # MOV MEM to REG Tests - create a unique name, use the opcode as the first argument for the executable (COMMAND function_name arg1)
 add_executable(test_mov_mem_to_reg tests/test_mov_mem_to_reg.c)
-#add_test(NAME test_mov_b_m COMMAND test_mov_mem_to_reg 0x46)
-#add_test(NAME test_mov_c_m COMMAND test_mov_mem_to_reg 0x4e)
-#add_test(NAME test_mov_d_m COMMAND test_mov_mem_to_reg 0x56)
-#add_test(NAME test_mov_e_m COMMAND test_mov_mem_to_reg 0x5e)
-#add_test(NAME test_mov_h_m COMMAND test_mov_mem_to_reg 0x66)
-#add_test(NAME test_mov_l_m COMMAND test_mov_mem_to_reg 0x6e)
-#add_test(NAME test_mov_a_m COMMAND test_mov_mem_to_reg 0x7e)
+add_test(NAME test_mov_b_m COMMAND test_mov_mem_to_reg 0x46)
+add_test(NAME test_mov_c_m COMMAND test_mov_mem_to_reg 0x4e)
+add_test(NAME test_mov_d_m COMMAND test_mov_mem_to_reg 0x56)
+add_test(NAME test_mov_e_m COMMAND test_mov_mem_to_reg 0x5e)
+add_test(NAME test_mov_h_m COMMAND test_mov_mem_to_reg 0x66)
+add_test(NAME test_mov_l_m COMMAND test_mov_mem_to_reg 0x6e)
+add_test(NAME test_mov_a_m COMMAND test_mov_mem_to_reg 0x7e)
 
 # MOV REG to MEM Tests - create a unique name, use the opcode as the first argument for the executable (COMMAND function_name arg1)
 add_executable(test_mov_reg_to_mem tests/test_mov_reg_to_mem.c)
