Added all mov_reg_to_mem tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,13 +76,13 @@ add_test(NAME test_mov_a_m COMMAND test_mov_mem_to_reg 0x7e)
 
 # MOV REG to MEM Tests - create a unique name, use the opcode as the first argument for the executable (COMMAND function_name arg1)
 add_executable(test_mov_reg_to_mem tests/test_mov_reg_to_mem.c)
-#add_test(NAME test_mov_m_b COMMAND test_mov_reg_to_mem 0x70)
-#add_test(NAME test_mov_m_c COMMAND test_mov_reg_to_mem 0x71)
-#add_test(NAME test_mov_m_d COMMAND test_mov_reg_to_mem 0x72)
-#add_test(NAME test_mov_m_e COMMAND test_mov_reg_to_mem 0x73)
-#add_test(NAME test_mov_m_h COMMAND test_mov_reg_to_mem 0x74)
-#add_test(NAME test_mov_m_l COMMAND test_mov_reg_to_mem 0x75)
-#add_test(NAME test_mov_m_a COMMAND test_mov_reg_to_mem 0x77)
+add_test(NAME test_mov_m_b COMMAND test_mov_reg_to_mem 0x70)
+add_test(NAME test_mov_m_c COMMAND test_mov_reg_to_mem 0x71)
+add_test(NAME test_mov_m_d COMMAND test_mov_reg_to_mem 0x72)
+add_test(NAME test_mov_m_e COMMAND test_mov_reg_to_mem 0x73)
+add_test(NAME test_mov_m_h COMMAND test_mov_reg_to_mem 0x74)
+add_test(NAME test_mov_m_l COMMAND test_mov_reg_to_mem 0x75)
+add_test(NAME test_mov_m_a COMMAND test_mov_reg_to_mem 0x77)
 
 # ANA REG Tests
 add_executable(test_ana_reg tests/test_ana_reg.c)
