Finished SUB and SBB, except for SBB A, which for some reason was the one I couldn't crack

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,6 +130,14 @@ add_test(NAME test_SUB_D COMMAND test_subtract 0x92)
 add_test(NAME test_SUB_E COMMAND test_subtract 0x93)
 add_test(NAME test_SUB_H COMMAND test_subtract 0x94)
 add_test(NAME test_SUB_L COMMAND test_subtract 0x95)
+add_test(NAME test_SUB_M COMMAND test_subtract 0x96)
+add_test(NAME test_SBB_B COMMAND test_subtract 0x98)
+add_test(NAME test_SBB_C COMMAND test_subtract 0x99)
+add_test(NAME test_SBB_D COMMAND test_subtract 0x9a)
+add_test(NAME test_SBB_E COMMAND test_subtract 0x9b)
+add_test(NAME test_SBB_H COMMAND test_subtract 0x9c)
+add_test(NAME test_SBB_L COMMAND test_subtract 0x9d)
+add_test(NAME test_SBB_M COMMAND test_subtract 0x9e)
 add_test(NAME test_subtract_helper COMMAND test_subtract 0xFFFF)
 
 # Test Move Immediate Instructions
