--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -271,8 +271,9 @@ add_test(NAME test_CMP_L, COMMAND test_compare 0xbd)
 add_test(NAME test_CMP_M, COMMAND test_compare 0xbe)
 add_test(NAME test_CMP_A, COMMAND test_compare 0xbf)
 
-add_executable(test_cmc tests/test_cmc.c)
-add_test(NAME test_CMC, COMMAND test_cmc 0x3f)
+add_executable(test_complement tests/test_complement.c)
+add_test(NAME test_CMC, COMMAND test_complement 0x3f)
+add_test(NAME test_CMA, COMMAND test_complement 0x2f)
 
 add_executable(test_decimal_adjust tests/test_decimal_adjust.c)
 add_test(NAME test_DAA, COMMAND test_decimal_adjust 0x27)
