--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,6 +151,7 @@ add_test(NAME test_LXI_D COMMAND test_load 0x11)
 add_test(NAME test_LDAX_B COMMAND test_load 0x0a)
 add_test(NAME test_LDAX_D COMMAND test_load 0x1a)
 add_test(NAME test_LDA COMMAND test_load 0x3a)
+add_test(NAME test_LHLD COMMAND test_load 0x2a)
 
 # Test Add Instructions
 add_executable(test_add tests/test_add.c)
