--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,6 +157,8 @@ add_executable(test_store tests/test_store.c)
 add_test(NAME test_SHLD COMMAND test_store 0x22)
 add_test(NAME test_SPHL COMMAND test_store 0xf9)
 add_test(NAME test_STA COMMAND test_store 0x32)
+add_test(NAME test_STAX_B COMMAND test_store 0x02)
+add_test(NAME test_STAX_D COMMAND test_store 0x12)
 
 # Test Add Instructions
 add_executable(test_add tests/test_add.c)
