uncommented on INX_H in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,7 +163,7 @@ add_test(NAME test_INR_L COMMAND test_add 0x2c)
 add_test(NAME test_INR_M COMMAND test_add 0x34)
 add_test(NAME test_INX_B COMMAND test_add 0x03)
 add_test(NAME test_INX_D COMMAND test_add 0x13)
-#add_test(NAME test_INX_H COMMAND test_add 0x23)
+add_test(NAME test_INX_H COMMAND test_add 0x23)
 add_test(NAME test_INX_SP COMMAND test_add 0x33)
 add_test(NAME test_ADD_A COMMAND test_add 0x87)
 add_test(NAME test_ADD_B COMMAND test_add 0x80)
