--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,15 @@ cmake_minimum_required(VERSION 3.28)
 project(space_invaders_8080 C)
 set(CMAKE_C_STANDARD 11)
 
+# Set up SDL2 library
+find_package(SDL2 REQUIRED)
+include_directories(${SDL2_INCLUDE_DIRS})
+
 # Create a library with all of the 8080 source code
 add_library(8080 src/shell.c src/state.c src/disassemble8080p.c)
 
 # Any executable after this will automatically link the 8080 library
-link_libraries(8080)
+link_libraries(8080 ${SDL2_LIBRARIES})
 
 add_executable(space_invaders_8080 src/main.c)
 
@@ -296,3 +300,5 @@ add_test(NAME test_OUT, COMMAND test_io_interrupts 0xd3)
 #add_test(NAME test_state_at_10, COMMAND test_state 10)
 #add_test(NAME test_state_at_25, COMMAND test_state 25)
 
+add_executable(test_sound tests/test_sound.c)
+add_test(NAME test_sound1, COMMAND test_sound)
