--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,10 @@ project(space_invaders_8080 C)
 set(CMAKE_C_STANDARD 11)
 
 # Create a library with all of the 8080 source code
-add_library(8080 src/shell.c src/state.c src/disassemble8080p.c)
+add_library(8080 src/shell.c src/state.c src/disassemble8080p.c
+        src/video.c
+        src/rom_sections.c
+        src/libattopng.c)
 
 # Any executable after this will automatically link the 8080 library
 link_libraries(8080)
